# GestionDeEmpleados

./: .gitignore  CMakeLists.txt  README.md
data/: empleados.csv
include/: Empleado.h  Gerente.h  Jefe.h  ListaEmpleados.h  Supervisor.h  Tecnico.h  calculos.h  empleado.h
src/: Empleado.cpp  Gerente.cpp  Jefe.cpp  ListaEmpleados.cpp  Supervisor.cpp  Tecnico.cpp  calculos.cpp  empleado.cpp  main.cpp
